--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.1.*",
-        "way/generators": "dev-master",
-        "fzaninotto/faker": "1.3.*@dev"
+        "way/generators": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
@@ -37,5 +36,5 @@
 	"config": {
 		"preferred-install": "dist"
 	},
-	"minimum-stability": "stable"
+	"minimum-stability": "dev"
 }
